# andrej-karpathy-rdb-mybatis

./: .gitignore  INSTALL-FOR-AI.md  README.md  pyproject.toml
.claude/: plugin.json
.claude/commands/: karpathy-rdb-mybatis.md
.claude/skills/karpathy-rdb-mybatis/: SKILL.md
.claude/skills/karpathy-rdb-mybatis/references/: blueprint-input-contract.md  nexacro-uiadapter-spec.md  output-layout.md  vanilla-spec.md
.claude/skills/karpathy-rdb-mybatis/templates/controller/: controller.jakarta.java.j2  controller.java.j2
.claude/skills/karpathy-rdb-mybatis/templates/ddl/: data.sql.j2  schema.sql.j2
.claude/skills/karpathy-rdb-mybatis/templates/domain/: entity.jakarta.java.j2  entity.java.j2  entity.javax.java.j2
.claude/skills/karpathy-rdb-mybatis/templates/mapper/: mapper-interface.java.j2  (+2 more)
scripts/: blueprint_loader.py  codegen.py  column_classifier.py  compile.py  ddl_loader.py  endpoints_emitter.py  name_mapper.py  postgres_to_hsqldb.py  precompute.py  reporter.py  revalidator.py  toposort.py
tests/: test_blueprint_loader.py  test_codegen.py  test_codegen_lane_jakarta.py  test_codegen_lane_javax.py  test_codegen_lane_suffix.py  test_column_classifier.py  test_compile_cli.py  test_compile_endpoints_json.py  test_ddl_loader.py  test_endpoints_emitter.py  test_golden_path.py  test_name_mapper.py  test_postgres_to_hsqldb.py  test_precompute.py  test_reporter.py  test_revalidator.py  test_workflow.py
tests/fixtures/golden_blueprint/: _blueprint.yaml
tests/fixtures/golden_ddl/: V002__create_tables.sql  V003__create_indexes.sql  V004__create_constraints.sql
(+19 files in other folders)
