[project]
name = "andrej-karpathy-rdb-mybatis"
version = "0.1.0"
description = "Stage 3 codegen — Blueprint + DDL → MyBatis/nexacro uiadapter backend"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0", "jinja2>=3.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["scripts"]
testpaths = ["tests"]
